exports[`StateProxy > Should branch off correctly 1`] = `
{
  "symbols": {
    "advancement": {
      "foo": {
        "category": "advancement"
      }
    }
  },
  "node": {
    "type": "file",
    "children": [
      {
        "type": "symbol"
      }
    ]
  }
}
`;

exports[`StateProxy > Should branch off correctly 2`] = `
{
  "symbols": {
    "advancement": {
      "foo": {
        "category": "advancement"
      }
    }
  },
  "node": {
    "type": "file",
    "children": [
      {
        "type": "modified_symbol"
      }
    ]
  }
}
`;

exports[`StateProxy > Should branch off correctly 3`] = `
{
  "symbols": {
    "advancement": {
      "foo": {
        "category": "not_advancement"
      }
    }
  },
  "node": {
    "type": "file",
    "children": [
      {
        "type": "modified_symbol"
      }
    ]
  }
}
`;

exports[`StateProxy > Should branch off correctly 4`] = `
{
  "symbols": {
    "advancement": {
      "foo": {
        "category": "advancement"
      }
    }
  },
  "node": {
    "type": "file",
    "children": [
      {
        "type": "modified_symbol"
      }
    ]
  }
}
`;

exports[`StateProxy > Should branch off correctly 5`] = `
{
  "symbols": {
    "advancement": {
      "foo": {
        "category": "not_not_advancement"
      }
    }
  },
  "node": {
    "type": "file",
    "children": [
      {
        "type": "modified_symbol"
      }
    ]
  }
}
`;

exports[`StateProxy > Should branch off correctly 6`] = `
{
  "symbols": {
    "advancement": {
      "foo": {
        "category": "advancement"
      }
    }
  },
  "node": {
    "type": "file",
    "children": [
      {
        "type": "symbol"
      }
    ]
  }
}
`;

exports[`StateProxy > Should branch off correctly 7`] = `
{
  "symbols": {
    "advancement": {
      "foo": {
        "category": "not_not_advancement"
      }
    }
  },
  "node": {
    "type": "file",
    "children": [
      {
        "type": "modified_symbol"
      }
    ]
  }
}
`;

exports[`StateProxy > Should create enumerable proxy 1`] = `
{
  "symbols": {
    "advancement": {
      "foo": {
        "category": "advancement"
      }
    }
  },
  "node": {
    "type": "file",
    "children": [
      {
        "type": "symbol"
      }
    ]
  }
}
`;

exports[`StateProxy > Should undo and redo changes correctly 1`] = `
{
  "symbols": {
    "advancement": {
      "foo": {
        "category": "advancement"
      }
    }
  },
  "node": {
    "type": "file",
    "children": [
      {
        "type": "symbol"
      }
    ]
  }
}
`;

exports[`StateProxy > Should undo and redo changes correctly 2`] = `
{
  "symbols": {
    "advancement": {
      "foo": {
        "category": "advancement"
      },
      "bar": {
        "category": "advancement",
        "data": 42
      }
    }
  },
  "node": {
    "type": "file",
    "children": [
      {
        "type": "modified_symbol",
        "symbol": {
          "category": "advancement",
          "data": 42
        }
      }
    ]
  }
}
`;

exports[`StateProxy > Should undo and redo changes correctly 3`] = `
{
  "symbols": {
    "advancement": {
      "foo": {
        "category": "advancement"
      }
    }
  },
  "node": {
    "type": "file",
    "children": [
      {
        "type": "symbol"
      }
    ]
  }
}
`;

exports[`StateProxy > Should undo and redo changes correctly 4`] = `
{
  "symbols": {
    "advancement": {
      "foo": {
        "category": "advancement"
      },
      "bar": {
        "category": "advancement",
        "data": 42
      }
    }
  },
  "node": {
    "type": "file",
    "children": [
      {
        "type": "modified_symbol",
        "symbol": {
          "category": "advancement",
          "data": 42
        }
      }
    ]
  }
}
`;
